# flashnote

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
assets/: README.zh-CN.md
src/: main.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
